Multi instance (#670)